# Vulkan-Raytracing

./: .gitignore  README.md  flake.nix  meson.build
shaders/: meson.build
shaders/common/: constants.glsl  layout.glsl  payload.glsl  primary_rays.glsl  random.glsl  scene_data.glsl
shaders/compute/: glitch.comp
shaders/denoising/: g_buffer.glsl  svgf_denoising.glsl  svgf_filter.comp  svgf_layout.glsl  svgf_primary_hit.glsl  temporal_antialiasing.glsl
shaders/metalRough/: bsdf_sampler.glsl  conductor_brdf.glsl  g_buffer.glsl  light_sampler.glsl  material_layout.glsl  metal_rough_closesthit.rchit  metal_rough_miss.rmiss  metal_rough_raygen.rgen  options.glsl  push_constants.glsl  trowbridge_reitz_distribution.glsl  write_g_buffer.glsl
shaders/miss/: environment_miss.rmiss  shadow_miss.rmiss
shaders/phong/: options.glsl  phong_closesthit.rchit  phong_raygen.rgen  push_constants.glsl
src/: DescriptorAllocator.cpp  PipelineBuilder.cpp  main.cpp  meson.build
src/builders/: AccelerationStructureBuilder.cpp  AssimpModelLoader.cpp  BottomLevelAccelerationStructureBuilder.cpp  DescriptorAllocator.cpp  DescriptorLayoutBuilder.cpp  MeshAssetBuilder.cpp  ModelLoader.cpp  PipelineBuilder.cpp  RasterizerPipelineBuilder.cpp  RaytracingPipelineBuilder.cpp  RenderPassBuilder.cpp  ResourceBuilder.cpp  RessourceBuilder.cpp  TopLevelAccelerationStructureBuilder.cpp  meson.build
src/engine/: Engine.cpp  InputManager.cpp  RenderingManager.cpp  SwapchainManager.cpp  Window.cpp  meson.build
src/engine/builders/: ResourceBuilder.cpp
src/engine/camera/: Camera.cpp  InteractiveCamera.cpp
src/engine/renderer/: CommandManager.cpp  ComputeRenderer.cpp  DescriptorAllocator.cpp  GeometryManager.cpp  RaytracingRenderer.cpp  RenderTarget.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  Swapchain.cpp  VulkanRenderer.cpp  Window.cpp  meson.build
src/engine/renderer/builders/: DescriptorLayoutBuilder.cpp  RasterizerPipelineBuilder.cpp  RenderPassBuilder.cpp  ResourceBuilder.cpp  meson.build
src/engine/renderer/context/: DeviceManager.cpp
src/engine/renderer/resources/: EnvironmentMap.cpp  Pipeline.cpp
src/engine/renderer/scene_management/: meson.build
src/engine/renderer/vulkan_scene_representation/: MaterialManager.cpp  SceneAdapter.cpp  SceneManager.cpp  meson.build
src/engine/rendering/: CommandManager.cpp  meson.build
src/engine/rendering/builders/: ResourceBuilder.cpp
src/engine/rendering/context/: DeviceManager.cpp
src/engine/rendering/renderer/: ComputeRenderer.cpp  RaytracingRenderer.cpp  Renderer.cpp
src/engine/rendering/resources/: meson.build
src/engine/rendering/vulkan_scene_representation/: GeometryManager.cpp
src/engine/repositories/: MeshRepository.cpp  TextureRepository.cpp  meson.build
src/engine/resources/: EnvironmentMap.cpp  meson.build
src/engine/resources/materials/: Material.cpp  MetalRoughInstance.cpp  MetalRoughMaterial.cpp  PhongInstance.cpp  PhongMaterial.cpp
src/engine/runner/: BenchmarkRenderer.cpp  BenchmarkRunner.cpp  ComputeRunner.cpp  RealtimeRunner.cpp  ReferenceRenderer.cpp  ReferenceRunner.cpp  Runner.cpp  VulkanEngine.cpp  meson.build
src/engine/scene_graph/: Node.cpp  SceneManager.cpp  meson.build
src/engine/scene_graph/components/: Camera.cpp  MeshRenderer.cpp  Rigidbody.cpp  Transform.cpp  meson.build
src/engine/ui/: GuiManager.cpp  GuiRenderer.cpp  HierarchyWindow.cpp  InspectorWindow.cpp  OptionsWindow.cpp  meson.build
src/io/: SceneReader.cpp  SceneWriter.cpp  meson.build
src/options/: PropertiesManager.cpp
src/properties/: ImGuiProperties.cpp  YamlDumpProperties.cpp  YamlLoadProperties.cpp
src/rendering/: meson.build
src/rendering/camera/: Camera.cpp  InteractiveCamera.cpp  meson.build
src/rendering/engine/: Camera.cpp  CommandManager.cpp  DescriptorAllocator.cpp  EngineResources.cpp  GeometryManager.cpp  GuiWindow.cpp  InstanceManager.cpp  InteractiveCamera.cpp  ReferenceRenderer.cpp  RenderTarget.cpp  Scene.cpp  SceneManager.cpp  SwapChain.cpp  Swapchain.cpp  VulkanEngine.cpp  meson.build
src/rendering/engine/context/: DeviceManager.cpp  meson.build
src/rendering/engine/renderer/: BenchmarkRenderer.cpp  RealtimeRenderer.cpp  ReferenceRenderer.cpp  VulkanEngine.cpp  meson.build
src/rendering/engine/runtime_context/: DefaultResources.cpp  EngineResources.cpp  meson.build
src/rendering/engine/scene_management/: GeometryManager.cpp  InstanceManager.cpp  SceneManager.cpp
src/rendering/engine/vulkan_context/: CommandManager.cpp  DeviceManager.cpp  Swapchain.cpp  meson.build
src/rendering/nodes/: MeshNode.cpp  meson.build
src/rendering/options/: PropertiesManager.cpp  meson.build
src/rendering/resources/: AccelerationStructure.cpp  Pipeline.cpp  Texture.cpp  meson.build
src/rendering/resources/materials/: Material.cpp  MetalRoughInstance.cpp  MetalRoughMaterial.cpp  PhongInstance.cpp  PhongMaterial.cpp  meson.build
src/rendering/resources/pipelines/: ComputePipeline.cpp  Pipeline.cpp  meson.build  (+1 more)
src/rendering/ressources/: AccelerationStructure.cpp  Pipeline.cpp  meson.build
src/rendering/scene_graph/: MeshNode.cpp  Node.cpp  meson.build
src/rendering/ui/: GuiManager.cpp  GuiWindow.cpp  HierarchyWindow.cpp  InspectorWindow.cpp  OptionsWindow.cpp  meson.build
src/shaders/: closesthit.rchit  compile.bat  input_structures.glsl  lighting.glsl  miss.rmiss  payload.glsl  raygen.rgen  scene_data.glsl  shader.frag  shader.vert  shadow_miss.rmiss
src/shaders/common/: engine_layout.glsl  layout.glsl  math.glsl  options.glsl  payload.glsl  random.glsl  raygen.rgen
src/shaders/legacy/: shader.vert
src/shaders/metalRough/: bsdf_flags.glsl  bsdf_sampler.glsl  conductor_brdf.glsl  dielectric_bsdf.glsl  infinite_area_light.glsl  light_sampler.glsl  metal_rough_closesthit.rchit  metal_rough_lighting.glsl  metal_rough_miss.rmiss  metal_rough_raygen.rgen  options.glsl  torrance_sparrow_brdf.glsl  trowbridge_reitz_distribution.glsl
src/shaders/miss/: environment_miss.rmiss  miss.rmiss  shadow_miss.rmiss
src/shaders/phong/: closesthit.rchit  lighting.glsl  phong_closesthit.rchit  phong_raygen.rgen
(+269 files in other folders)
