src += files(
    'DescriptorLayoutBuilder.cpp',
    'MeshAssetBuilder.cpp',
    'RasterizerPipelineBuilder.cpp',
    'RenderPassBuilder.cpp',
    'RessourceBuilder.cpp',
    'AccelerationStructureBuilder.cpp',
    'BottomLevelAccelerationStructureBuilder.cpp',
    'TopLevelAccelerationStructureBuilder.cpp',
    'RaytracingPipelineBuilder.cpp',
)